8367002: Missing compiled exception handler for "recursive" exception

Reviewed-by: thartmann, kvn